--- a/app/views/shared/_users.html.erb
+++ b/app/views/shared/_users.html.erb
@@ -3,11 +3,13 @@
 </div>
 <script src="https://cdn.auth0.com/js/lock-7.9.min.js"></script>
 <script>
-  var lock = new Auth0Lock('2M7P0OrlDnifR6x8NfkNr3VQsdKsqaMC', 'contoso.auth0.com');
+
+  var lock = new Auth0Lock('MqYoqb2M9nLWAkupdwAtxAx3vuiXfjcP', 'helpernet.auth0.com');
+
 
   lock.show({
       container: 'root'
-    , callbackURL: <%= auth_auth0_callback_path %>
+    , callbackURL: '<%= auth_auth0_callback_path %>'
     , responseType: 'code'
     , authParams: {
       scope: 'openid profile'
