dashboard / user account functionality

--- a/app/views/dashboard/account.html.erb
+++ b/app/views/dashboard/account.html.erb
@@ -16,5 +16,5 @@ Dashboard here!
   <%= f.input :phone, label: "Phone Number" %>
   <%= f.input :email, label: "My Email" %>
 
-  <%= f.button :submit, 'Create!' %>
+  <%= f.button :submit, 'Save' %>
 <% end %>
