styling for tasks dashboard

--- a/app/views/dashboard/volunteer_index.html.erb
+++ b/app/views/dashboard/volunteer_index.html.erb
@@ -2,11 +2,16 @@ Dashboard here!
 
 <div class='help-requests'>
   <% @help_requests.each do |help_request| %>
-    <div class='help-request'>
-      <li><%= help_request.name             %></li>
-      <li><%= help_request.description      %></li>
-      <li><%= help_request.status           %></li>
-      <li><%= help_request.user.full_name %></li>
+    <%== "<div class='help-request status-#{help_request.status}'>" %>
+      <div class='title-section'>
+        <div class='task name'><%= help_request.name %></div>
+        <% if help_request.user %>
+          <div class='task name'><%= help_request.user.full_name %></div>
+        <% end %>
+        <div class='datetime'><%= help_request.created_at.strftime("%I:%M%p %A, %B %d") %></div>
+      </div>
+      <p><%= help_request.description %></p>
+
       <%= link_to 'Accept Task', help_request_path(help_request), method: :put %>
 
       <!-- <%= link_to image_tag('/images/imgname.png'), 'tasks/accept', method: :put %> -->
