--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -110,6 +110,7 @@
 
     #sidebar-wrapper {
         width: 250px;
+      background-color: #fff;
     }
 
     #wrapper.toggled #sidebar-wrapper {
