--- a/app/assets/stylesheets/css/simple-sidebar.css
+++ b/app/assets/stylesheets/css/simple-sidebar.css
@@ -128,7 +128,7 @@
 	.imageresponsive {
 	padding-top: 15px;
 	padding-bottom: 15px;
-	
+
 }
 .imageresponsive2 {
 	padding-bottom: 15px;
@@ -139,23 +139,19 @@
 .imageresponsive3 {
 	padding-top: 75px;
 	padding-bottom: 15px;
-  ;
 }
 .centered {
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
-  ;
 }
 .custombg {
 	padding-top: 100px;
-	padding bottom: 150px;
-  
-	background-image: url(../../Top-bg.png);
-	background-repeat:repeat-y;
-	;
+	padding-bottom: 150px;
+
+	background-image: url( "/assets/Top-bg.png" );
+	background-repeat: repeat-y;
 }
 .height {
-	min-height:300px;
-;
+	min-height: 300px;
 }
