--- a/app/views/layouts/volunteer.html.erb
+++ b/app/views/layouts/volunteer.html.erb
@@ -28,7 +28,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="images/helpnetlogo.png"></a>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                  <%= image_tag("helpnetlogo (1).png") %>
+
+                </a>
             </div>
 
 
@@ -43,7 +46,11 @@
                     <li>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services"><img src="images/topnav-stuff.png"></a>
+                        <a class="page-scroll" href="#services">
+
+                          <%= image_tag("topnav-stuff.png") %>
+
+                        </a>
                     </li>
                     <li>
                     </li>
@@ -53,7 +60,12 @@
         </div>
         <!-- /.container -->
     </nav>
-<div class="custombg"><h1>Search for Volunteer Opportunities</h1><p align="center"> <img src="images/searchbar.png"></p></div>
+<div class="custombg"><h1>Search for Volunteer Opportunities</h1><p align="center">
+
+  <%= image_tag("searchbar.png") %>
+
+
+</div>
              <br>
 
          <div id="wrapper">
@@ -61,16 +73,9 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-<!--                            <li class="sidebar-brand">-->
 
-
-                    </a>
-                </li>
-                  <li>
-                </li>
-                <li>
-                   <img src="images/Yourinstitutions.png">
-                </li>
+                  <%= image_tag("Yourinstitutions.png") %>
+                </ul>
                 <!--<li>
                     <a href="#">Volunteers</a>
                 </li>
@@ -96,10 +101,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="col-md-6">
-                          <%= yield %>
-
-                        <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>-->
+                        <%= yield %>
                     </div>
                 </div>
             </div>
