--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -13,7 +13,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -27,8 +27,6 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top"><img src="images/helpnetlogo (1).png"></a>
             </div>
-
-
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -87,23 +85,21 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="col-md-6">
-                        <img class="imageresponsive" src="images/createatask.png">
+                        <img src="images/createatask.png">
 
 
-                        <img class="imageresponsive2" src="images/analytics-pic.png"></div>
+                        <img src="images/analytics-pic.png"></div>
                         <div class="col-md-6">
 
-                        <img class="imageresponsive3" src="images/Newsfeed.png"></div>
+                        <img src="images/Newsfeed.png"></div>
                         <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>-->
                     </div>
                 </div>
             </div>
-        </div>
         <!-- /#page-content-wrapper -->
 
     </div>
