--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -85,18 +85,18 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 25px;
-    font-size: 18px;
-    line-height: 60px;
+  height: 25px;
+  font-size: 18px;
+  line-height: 60px;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+  color: #999999;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+  color: #fff;
+  background: none;
 }
 
 @media(min-width:768px) {
@@ -126,36 +126,32 @@
         margin-right: 0;
     }
 	.imageresponsive {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	
+  	padding-top: 15px;
+  	padding-bottom: 15px;
+  }
 }
 .imageresponsive2 {
 	padding-bottom: 15px;
-		padding-top: 15px;
+	padding-top: 15px;
 
-    max-width: 450px;
+  max-width: 450px;
 }
 .imageresponsive3 {
 	padding-top: 75px;
 	padding-bottom: 15px;
-  ;
 }
 .centered {
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
-  ;
 }
 .custombg {
 	padding-top: 100px;
-	padding bottom: 150px;
-  
-	background-image: url( "/assets/Top-bg.png" );
-	background-repeat:repeat-y;
-	;
+	padding-bottom: 150px;
+
+	background-image: url("/assets/Top-bg.png" );
+	background-repeat: repeat-y;
 }
 .height {
 	min-height:300px;
-;
 }
