--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,15 +2,12 @@
 <html lang="en">
 
 <head>
+<head>
+  <title>Admin Dashboard</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Dashboard</title>
-
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
 </head>
 
 <body id="page-top" data-target=".navbar-fixed-top">
@@ -89,13 +86,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="col-md-6">
-                        <img src="images/createatask.png">
-
-
-                        <img src="images/analytics-pic.png"></div>
+                           <%= yield %>
+                          <img src="images/analytics-pic.png">
+                        </div>
                         <div class="col-md-6">
-
-                        <img src="images/Newsfeed.png"></div>
+                          <img src="images/Newsfeed.png">
+                        </div>
                         <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>-->
                     </div>
                 </div>
