--- a/app/views/helper_dashboard/index.html.erb
+++ b/app/views/helper_dashboard/index.html.erb
@@ -1,3 +1,10 @@
+<h2>
+  Open Help Requests
+</h2>
+<p class='help-request'>
+  Help requests are submitted by sending texts to (470) - HelpNet, i.e. 470-435-7638. When a help request is accepted here, the person who sent it receives a text that their help request has been accepted.
+</p>
+
 <div class='help-requests'>
   <% @help_requests.each do |help_request| %>
     <%== "<div class='help-request left status-#{help_request.status}'>" %>
