--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="images/helpnetlogo (1).png"></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="images/helpnetlogo (1).png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,7 +46,7 @@
         </div>
         <!-- /.container -->
     </nav>
-         <div id="wrapper">
+       <div id="wrapper" class='admin-dashboard'>
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
