--- a/app/views/layouts/helper.html.erb
+++ b/app/views/layouts/helper.html.erb
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href='/'>
                   <%= image_tag("helpnetlogo (1).png") %>
 
                 </a>
@@ -60,15 +60,10 @@
         </div>
         <!-- /.container -->
     </nav>
-<div class="custombg"><h1>Search for Volunteer Opportunities</h1><p align="center">
-
+<div class="custombg"><h1>Help People in Need</h1><p align="center">
   <%= image_tag("searchbar.png") %>
-
-
 </div>
-             <br>
-
-         <div id="wrapper">
+       <div id="wrapper">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
