--- a/app/assets/stylesheets/agency.css
+++ b/app/assets/stylesheets/agency.css
@@ -265,7 +265,7 @@ header {
     text-align: center;
     color: #000;
     background-attachment: scroll;
-    background-image: url(../assets/backgroundimage.jpg);
+    background-image: url('/images/backgroundimage.jpg');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
