--- a/app/views/helper_dashboard/index.html.erb
+++ b/app/views/helper_dashboard/index.html.erb
@@ -2,7 +2,7 @@
   Open Help Requests
 </h2>
 <p class='help-request'>
-  Help requests are submitted by sending texts to (470) - HelpNet, i.e. 470-435-7638. When a help request is accepted here, the person who sent it receives a text that their help request has been accepted.
+  Help requests are submitted by sending texts to (470) - HelpNet, i.e. 470-435-7638. When a help request is accepted here, the person who sent it receives a text that their help request has been accepted. Text format: &lt;name&gt; ; &lt;subject&gt; ; &lt;description&gt;
 </p>
 
 <div class='help-requests'>
